# learn-vulkan-project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  convert-bin.py  vcpkg.json  xmake.lua
deprecated/deprecated-project/basic1/: CMakeLists.txt  app-init.cpp  app-main.cpp  app.hpp  main.cpp
deprecated/deprecated-project/basic1/shaders/: main.frag  main.vert
deprecated/deprecated-project/deferred-shading-c(deprecated)/: CMakeLists.txt  application.hpp  check-err.h
deprecated/deprecated-project/deferred-shading-c(deprecated)/shaders/: composite.frag  composite.vert  gbuffer.frag  gbuffer.vert
deprecated/deprecated-project/deferred-shading-c(deprecated)/src/: application.cpp  composite-pipeline.cpp  composite-rt.cpp  deferred-pipeline.cpp  deferred-rt.cpp  environment.cpp  render-obj.cpp  shadow-rt.cpp  swapchain.cpp
deprecated/deprecated-project/obj_render/: CMakeLists.txt  main.cpp
deprecated/deprecated-project/obj_render/include/: application.hpp  inc-imgui.hpp
deprecated/deprecated-project/obj_render/shaders/: main.frag  main.vert
deprecated/deprecated-project/obj_render/src/: app-init-impl.cpp  app-loop-impl.cpp
deprecated/vklib/: .gitignore  CMakeLists.txt
deprecated/vklib/doc/: diagram.drawio
deprecated/vklib/doc/class-notes/: Class 1.md  Class 2.md
deprecated/vklib/include/: .natvis  vklib-base.hpp  vklib-buffer.hpp  vklib-command-pool.hpp  vklib-common.h  vklib-debug-utils.hpp  vklib-descriptor.hpp  vklib-device.hpp  vklib-framebuffer.hpp  vklib-image.hpp  vklib-instance.hpp  vklib-pipeline.hpp  vklib-renderpass.hpp  vklib-shader.hpp  vklib-surface.hpp  vklib-swapchain.hpp  vklib-synchronize.hpp  vklib-tools.hpp  vklib-utility-values.hpp  vklib-vma.hpp  vklib-window.hpp  vklib.h
deprecated/vklib/src/: vklib-buffer.cpp  vklib-command-pool.cpp  vklib-debug-utils.cpp  vklib-descriptor.cpp  vklib-device.cpp  vklib-framebuffer.cpp  vklib-image.cpp  vklib-instance.cpp  vklib-pipeline.cpp  vklib-renderpass.cpp  vklib-shader.cpp  vklib-surface.cpp  vklib-swapchain.cpp  vklib-synchronize.cpp  vklib-tools.cpp  vklib-utility-values.cpp  vklib-vma.cpp  vklib-window.cpp
projects/deferred-shading-cpp/: CMakeLists.txt
projects/deferred-shading-cpp/documents/: Bloom Pipeline.drawio
projects/deferred-shading-cpp/include/: app-basic.hpp  app-common.hpp  app-control.hpp  app-hdri.hpp  app-render.hpp  application.hpp  binary-resource.hpp
projects/deferred-shading-cpp/shaders/: composite.frag  exposure-lerp.comp  gen-diffuse.frag  lighting.frag  pbr.glsl
projects/deferred-shading-cpp/src/: app-hdri.cpp  app-logic.cpp  application.cpp  camera-controller.cpp  environment.cpp  pipeline.cpp  render-state.cpp  render-target.cpp  renderer.cpp  swapchain.cpp  ui-controller.cpp
projects/deferred-shading-gltf/: CMakeLists.txt  xmake.lua
projects/deferred-shading-gltf/documents/: VRAM-consumption-calculator.xlsx
projects/deferred-shading-gltf/include/: binary-resource.hpp  controller.hpp  core.hpp  environment.hpp  hdri.hpp  logic.hpp  model-renderer.hpp  pipeline.hpp  render-params.hpp  render-target.hpp
projects/deferred-shading-gltf/shaders/: bloom-acc.comp  bloom-blur.comp  bloom-filter.comp  composite.frag  cube.vert  fxaa.frag  gbuffer-skin.vert  gbuffer.frag  gbuffer.vert  gen-brdf.comp  gen-cubemap.frag  gen-specular.frag  gltf-pbr.glsl  lighting.frag  luminance.comp  pbr.glsl  quad.vert  shadow-opaque.vert  shadow-skin-opaque.vert  shadow-skin.vert  shadow.frag  shadow.vert
projects/deferred-shading-gltf/src/: binary-resource.cpp  camera-controller.cpp  core.cpp  environment.cpp  hdri.cpp  logic.cpp  main.cpp  model-renderer.cpp  pipeline.cpp  render-params.cpp  render-state.cpp  render-target.cpp  ui-controller.cpp
projects/deferred-shading-gltf/src/logic/: idle-logic.cpp  load-hdri-logic.cpp  load-model-logic.cpp  render-logic.cpp  scene-preset.cpp
vklib-hpp/: CMakeLists.txt  xmake.lua
vklib-hpp/core/: CMakeLists.txt  xmake.lua
vklib-hpp/core/include/: vklib-base.hpp  vklib-cmdbuf.hpp  vklib-core.hpp  vklib-debug.hpp  vklib-env.hpp  vklib-helper.hpp  vklib-io.hpp  vklib-pipeline.hpp  vklib-storage.hpp  vklib-swapchain.hpp  vklib-sync.hpp
vklib-hpp/core/include/vklib/: core.hpp
vklib-hpp/core/include/vklib/core/: algorithm.hpp  allocator.hpp  (+13 more)
vklib-hpp/core/src/: algorithm.cpp  allocator.cpp  debug.cpp  io.cpp  pipeline.cpp  storage.cpp  sync.cpp  vklib-algorithm.cpp  vklib-cmdbuf.cpp  vklib-debug.cpp  vklib-env.cpp  vklib-impl.cpp  vklib-io-mesh.cpp  vklib-io.cpp  vklib-pipeline.cpp  vklib-storage.cpp  vklib-swapchain.cpp  vklib-utility.cpp
vklib-hpp/glfw3/: CMakeLists.txt  xmake.lua
vklib-hpp/glfw3/include/: vklib-glfw3.hpp
vklib-hpp/glfw3/include/vklib/: glfw3.hpp
vklib-hpp/glfw3/src/: glfw3.cpp  vklib-glfw3.cpp
vklib-hpp/gltf/: CMakeLists.txt  xmake.lua
vklib-hpp/gltf/include/: vklib-gltf.hpp
vklib-hpp/gltf/include/vklib/: gltf.hpp
vklib-hpp/gltf/src/: animation.cpp  camera.cpp  data-accessor.cpp  data-accessor.hpp  model.cpp  node.cpp  texture.cpp
vklib-hpp/include/: vklib  vklib-algorithm.hpp  vklib-allocator.hpp  vklib-base.hpp  vklib-cmdbuf.hpp  vklib-common.hpp  vklib-debug.hpp  vklib-env.hpp  vklib-gltf.hpp  vklib-io.hpp  vklib-pipeline.hpp  vklib-storage.hpp  vklib-swapchain.hpp  vklib-sync.hpp  vklib-utility.hpp
vklib-hpp/sdl2/: CMakeLists.txt  vklib-sdl2.hpp  xmake.lua
vklib-hpp/sdl2/include/: vklib-sdl2.hpp
vklib-hpp/sdl2/include/vklib/: sdl2.hpp
vklib-hpp/sdl2/src/: sdl2.cpp  vklib-sdl2.cpp
vklib-hpp/src/: vklib-algorithm.cpp  vklib-allocator.cpp  vklib-cmdbuf.cpp  vklib-debug.cpp  vklib-env.cpp  vklib-gltf.cpp  vklib-impl.cpp  vklib-io-image.cpp  vklib-io-mesh.cpp  vklib-io.cpp  vklib-pipeline.cpp  vklib-storage.cpp  vklib-sync.cpp
vklib-hpp/stbi/: CMakeLists.txt  xmake.lua
vklib-hpp/stbi/include/: vklib-stbi.hpp
vklib-hpp/stbi/include/vklib/: stbi.hpp
vklib-hpp/stbi/src/: stbi.cpp  vklib-stbi.cpp
vklib-hpp/wavefront/: xmake.lua
vklib-hpp/wavefront/include/: vklib-wavefront-obj.hpp
vklib-hpp/wavefront/include/vklib/: wavefront-obj.hpp
vklib-hpp/wavefront/src/: impl.cpp
(+2 files in other folders)
