project("Deferred Shading Vulkan")

add_executable(deferred_shading_gltf)
file(GLOB_RECURSE deferred_shading_cpp_src src/*.cpp)
target_sources(deferred_shading_gltf PRIVATE ${deferred_shading_cpp_src})
target_link_libraries(deferred_shading_gltf PRIVATE vklib_core vklib_sdl2 vklib_stbi vklib_gltf)
target_include_directories(deferred_shading_gltf PRIVATE ./include)

find_package(imgui CONFIG REQUIRED)
target_link_libraries(deferred_shading_gltf PRIVATE imgui::imgui)

find_path(TINYGLTF_INCLUDE_DIRS "tiny_gltf.h")
target_include_directories(deferred_shading_gltf PRIVATE ${TINYGLTF_INCLUDE_DIRS})

compile_shader(deferred_shading_gltf shaders/bloom-acc.comp bloom_acc_comp)
compile_shader(deferred_shading_gltf shaders/bloom-blur.comp bloom_blur_comp)
compile_shader(deferred_shading_gltf shaders/bloom-filter.comp bloom_filter_comp)
compile_shader(deferred_shading_gltf shaders/composite.frag composite_frag)
compile_shader(deferred_shading_gltf shaders/cube.vert cube_vert)
compile_shader(deferred_shading_gltf shaders/exposure-lerp.comp exposure_lerp_comp)
compile_shader(deferred_shading_gltf shaders/fxaa.frag fxaa_frag)
compile_shader(deferred_shading_gltf shaders/gbuffer.frag gbuffer_frag)
compile_shader(deferred_shading_gltf shaders/gbuffer.vert gbuffer_vert)
compile_shader(deferred_shading_gltf shaders/gbuffer-skin.vert gbuffer_skin_vert)
compile_shader(deferred_shading_gltf shaders/gen-brdf.comp gen_brdf_comp)
compile_shader(deferred_shading_gltf shaders/gen-cubemap.frag gen_cubemap_frag)
compile_shader(deferred_shading_gltf shaders/gen-diffuse.frag gen_diffuse_frag)
compile_shader(deferred_shading_gltf shaders/gen-specular.frag gen_specular_frag)
compile_shader(deferred_shading_gltf shaders/lighting.frag lighting_frag)
compile_shader(deferred_shading_gltf shaders/luminance.comp luminance_comp)
compile_shader(deferred_shading_gltf shaders/quad.vert quad_vert)
compile_shader(deferred_shading_gltf shaders/shadow.frag shadow_frag)
compile_shader(deferred_shading_gltf shaders/shadow.vert shadow_vert)
compile_shader(deferred_shading_gltf shaders/shadow-opaque.vert shadow_opaque_vert)
compile_shader(deferred_shading_gltf shaders/shadow-skin.vert shadow_skin_vert)
compile_shader(deferred_shading_gltf shaders/shadow-skin-opaque.vert shadow_skin_opaque_vert)

binary_dependency(deferred_shading_gltf assets/roboto.ttf roboto_font)
binary_dependency(deferred_shading_gltf assets/damaged-helmet.glb damaged_helmet)
binary_dependency(deferred_shading_gltf assets/builtin-hdr.hdr builtin_hdr)